--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = perl-XML-Parser
-url = http://search.cpan.org/CPAN/authors/id/M/MS/MSERGEANT/XML-Parser-2.36.tar.gz
+url = https://cpan.metacpan.org/authors/id/T/TO/TODDR/XML-Parser-2.44.tar.gz
 archives = 
 giturl = 
 
